--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -212,7 +212,7 @@ pre {
     width: 16px;
     height: 16px;
     display: inline-block;
-    fill: #{$grey-color};
+    fill: black;
     padding-right: 5px;
     vertical-align: text-top;
 }
