--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -2,10 +2,11 @@
  * Site header
  */
 .site-header {
-  border-top: 5px solid $grey-color-dark;
+  //border-top: 5px solid $grey-color-dark;
   border-bottom: 1px solid $grey-color-light;
   min-height: $spacing-unit * 1.865;
 
+  background-image: linear-gradient(to right, #FFDE59, #FF914D);
   // Positioning context for the mobile navigation icon
   position: relative;
 }
@@ -50,7 +51,7 @@
     position: absolute;
     top: 9px;
     right: $spacing-unit * 0.5;
-    background-color: $background-color;
+    background-image: linear-gradient(to right, #FFDE59, #FF914D);
     border: 1px solid $grey-color-light;
     border-radius: 5px;
     text-align: right;
@@ -74,7 +75,7 @@
       text-align: center;
 
       > svg {
-        fill: $grey-color-dark;
+        fill: black;
       }
     }
 
@@ -108,6 +109,7 @@
 .site-footer {
   border-top: 1px solid $grey-color-light;
   padding-top: $spacing-unit * 0.5;
+  background-image: linear-gradient(to right, #FFDE59, #FF914D);
 }
 
 .footer-heading {
@@ -178,6 +180,8 @@
 .page-content {
   padding: $spacing-unit 0;
   flex: 1;
+  // background-image: linear-gradient(to right, #FF914D, #FFDE59);
+  background-color: #FAF6EE;
 }
 
 .page-heading {
