Updated Fonts for header and content

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -4,9 +4,9 @@
 
 // Define defaults for each variable.
 
-$base-font-family: 'Saint George', sans-serif !default;
+$base-font-family: 'Montserrat', sans-serif !default;
 $base-font-size:   20px !default;
-$base-font-weight: 200 !default;
+$base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
 $base-line-height: 1.5 !default;
 
