--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -12,8 +12,8 @@ $base-line-height: 1.5 !default;
 
 $spacing-unit:     30px !default;
 
-$text-color:       #111 !default;
-$background-color: #fdfdfd !default;
+$text-color:       #111111 !default;
+$background-color: #ffffff !default;
 $brand-color:      #2a7ae2 !default;
 
 $grey-color:       #828282 !default;
@@ -23,7 +23,7 @@ $grey-color-dark:  darken($grey-color, 25%) !default;
 $table-text-align: left !default;
 
 // Width of the content area
-$content-width:    full;
+$content-width:    1500px;
 
 $on-palm:          600px !default;
 $on-laptop:        800px !default;
