--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -103,6 +103,9 @@
   
 
   @include media-query($on-palm) {
+    body.nav-open {
+      overflow: hidden; /* Prevent scrolling when menu is open */
+    }
     position: absolute;
     top: $spacing-unit * 0.8;
     right: $spacing-unit * 0.5;
@@ -154,7 +157,7 @@
     input:checked ~ .trigger {
       display: block;
       padding-bottom: 5px;
-      animation: slideFromIcon 0.3s ease-out forwards;
+      animation: slideFromIcon 0.2s ease-out forwards;
     }
 
     .page-link {
@@ -170,8 +173,8 @@
       // Animate each menu item with a delay
       @for $i from 1 through 5 {
         &:nth-child(#{$i}) {
-          animation: fadeIn 0.3s ease-out forwards;
-          animation-delay: #{0.2 + $i * 0.1}s;
+          animation: fadeIn 0.2s ease-out forwards;
+          animation-delay: #{0.05 + $i * 0.05}s;
         }
       }
     }
