--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  {% if page.layout == 'home' %}
+    <title>Društvo Fršlus</title>
+  {% endif %}
   {%- seo -%}
   <script src="{{ '/assets/page-transitions.js' | relative_url }}"></script>
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
