added first post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,6 +18,7 @@ layout: default
         </span>
       {%- endif -%}
     </p>
+    <img class="header-image" src="{{ page.image | relative_url }}" alt="{{ page.title }}">
   </header>
 
   <div class="post-content e-content" itemprop="articleBody">
