--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,6 +25,9 @@ layout: default
             {{ post.title | escape }}
           </a>
         </h3>
+        {% if post.image %}
+        <img class="post-image" src="{{ post.image | relative_url }}" alt="{{ post.title }}">
+      {% endif %}  
         {%- if site.show_excerpts -%}
           {{ post.excerpt }}
         {%- endif -%}
