--- a/_layouts/novice.html
+++ b/_layouts/novice.html
@@ -22,6 +22,10 @@ layout: default
             {{ post.title | escape }}
           </a>
         </h3>
+        {% if post.image %}
+        <img class="post-image" src="{{ post.image | relative_url }}" alt="{{ post.title }}">
+      {% endif %}  
+  
         {%- if site.show_excerpts -%}
           {{ post.excerpt }}
         {%- endif -%}
