--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
   <div class="bar">
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.header_pages | default: default_paths -%}
-    <a class="site-title" rel="author" href="{{ "/" | relative_url }}">
+    <a class="site-title trigger" rel="author" href="{{ "/" | relative_url }}">
         <img src="{{ '/logoshort.png' | relative_url }}" style="height: 60px;">
     </a>
 
