--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -14,7 +14,7 @@ $spacing-unit:     30px !default;
 
 $text-color:       #111111 !default;
 $background-color: #ffffff !default;
-$brand-color:      #2a7ae2 !default;
+$brand-color:      #0170B8 !default;
 
 $grey-color:       #828282 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
