--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -85,6 +85,15 @@
   }
 }
 
+.page-content .wrapper {
+  background-color: #FAF6EE;
+  outline: 15px solid #FAF6EE;
+  border-radius: 10px;
+  @include media-query($on-palm) {
+    outline: 0px;
+    border-radius: 0px;
+  }
+}
 
 .site-title {
   @include relative-font-size(1.625);
@@ -168,6 +177,16 @@
       height: 36px;
       z-index: 2;
       cursor: pointer;
+      transition: transform 0.3s ease;
+
+      &:hover {
+        transform: rotate(90deg);
+      }
+
+      &:active {
+        transform: rotate(90deg);
+      }
+
     }
 
     .menu-icon {
@@ -192,6 +211,7 @@
     input:checked ~ .trigger {
       display: block;
       padding-bottom: 5px;
+      animation: slideDown 0.3s ease-out forwards;
     }
 
     .page-link {
