transformed gradient into zipper

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
     <title>Društvo Fršlus</title>
   {% endif %}
   {%- seo -%}
-  <script src="{{ '/assets/page-transitions.js' | relative_url }}"></script>
+  <script src="{{ '/assets/zipper.js' | relative_url }}"></script>
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
