--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,11 +7,24 @@
 
     {%- include header.html -%}
 
-    <div class="gradient-container {% if page.layout == 'home' %}show-gradient{% else %}hide-gradient{% endif %}">
       {% if page.layout == 'home' %}
-        <div class="gradient"></div>
+      <div class="gradient">
+        <div class="zipper">
+          <div class="zipper-container">
+            <div class="zipper-track">
+              <div class="zipper-slider">
+                <div class="zipper-pull"></div>
+              </div>
+              <div class="zipper-left"></div>
+              <div class="zipper-right"></div>
+            </div>
+            <div class="zipper-opening"></div>
+          </div>
+        </div>
+      </div>
+      
+      
       {% endif %}
-    </div>
     
     <main class="page-content" aria-label="Content">
       <div class="wrapper">
