--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -26,6 +26,9 @@ body {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
+  @include media-query($on-palm) {
+    background-color: #FAF6EE;
+  }
 }
 
 
