different menu icon mobile

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
             </svg>
           </span>
         </label>
-
+        <div class="menu-overlay"></div>
         <div class="trigger">
           <a class="page-link{% if page.url == '/' %} active{% endif %}" href="{{ "/" | relative_url }}">Domov</a>
           {%- for path in page_paths -%}
