Revert "Revamp home page, added new sites, changed logo"
This reverts commit 10720126be5364b8a1937b56c80e0b42e130a8f7.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,18 @@
 
       {% if page.layout == 'home' %}
       <div class="gradient">
+        <div class="zipper">
+          <div class="zipper-container">
+            <div class="zipper-track">
+              <div class="zipper-slider">
+                <div class="zipper-pull"></div>
+              </div>
+              <div class="zipper-left"></div>
+              <div class="zipper-right"></div>
+            </div>
+            <div class="zipper-opening"></div>
+          </div>
+        </div>
       </div>
       
       
