--- a/_layouts/novice.html
+++ b/_layouts/novice.html
@@ -5,37 +5,34 @@ layout: default
 <div class="home">
     <h1 class="post-title">{{ page.title | escape }}</h1>
 
-    {{ content }}
+  {{ content }}
 
-    {%- assign novice_posts = site.posts | where: "category", "novice" -%}
+  {%- if site.posts.size > 0 -%}
+    <ul class="post-list">
+      {%- for post in site.posts -%}
+      <li>
+        {%- assign months = "januar|februar|marec|april|maj|junij|julij|avgust|september|oktober|november|december" | split: "|" -%}
+        {%- assign month_index = post.date | date: "%-m" | minus: 1 -%}
+        {%- assign month_name = months[month_index] -%}
 
-    {%- if novice_posts.size > 0 -%}
-      <ul class="post-list">
-        {%- for post in novice_posts -%}
-        <li>
-          {%- assign months = "januar|februar|marec|april|maj|junij|julij|avgust|september|oktober|november|december" | split: "|" -%}
-          {%- assign month_index = post.date | date: "%-m" | minus: 1 -%}
-          {%- assign month_name = months[month_index] -%}
+<span class="post-meta">{{ post.date | date: "%-d." }} {{ month_name }} {{ post.date | date: "%Y" }}</span>
 
-          <span class="post-meta">{{ post.date | date: "%-d." }} {{ month_name }} {{ post.date | date: "%Y" }}</span>
+        <h3>
+          <a class="post-link" href="{{ post.url | relative_url }}">
+            {{ post.title | escape }}
+          </a>
+        </h3>
+        {% if post.image %}
+        <img class="post-image" src="{{ post.image | relative_url }}" alt="{{ post.title }}">
+      {% endif %}  
+  
+        {%- if site.show_excerpts -%}
+          {{ post.excerpt }}
+        {%- endif -%}
+      </li>
+      {%- endfor -%}
+    </ul>
 
-          <h3>
-            <a class="post-link" href="{{ post.url | relative_url }}">
-              {{ post.title | escape }}
-            </a>
-          </h3>
-          {% if post.image %}
-            <img class="post-image" src="{{ post.image | relative_url }}" alt="{{ post.title }}">
-          {% endif %}
+  {%- endif -%}
 
-          {%- if site.show_excerpts -%}
-            {{ post.excerpt }}
-          {%- endif -%}
-        </li>
-        {%- endfor -%}
-      </ul>
-
-    {%- else -%}
-      <p>Ni objav :(</p>
-    {%- endif -%}
 </div>
