Changed jpg to webp

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -25,7 +25,7 @@
 /* Update these styles in your _layout.scss file */
 
 .gradient {
-  background-image: url('/assets/slike/homepage.jpg');
+  background-image: url('/assets/slike/homepage.webp');
   height: 50vh; /* Full viewport height initially */
   width: 100%;
   background-repeat: no-repeat;
