--- a/_layouts/novice.html
+++ b/_layouts/novice.html
@@ -7,7 +7,7 @@ layout: default
 
     {{ content }}
 
-    {%- assign novice_posts = site.posts | where: "category", "novice" -%}
+    {%- assign novice_posts = site.posts | where: "categories", "novice" -%}
 
     {%- if novice_posts.size > 0 -%}
       <ul class="post-list">
