--- a/_layouts/publikacije.html
+++ b/_layouts/publikacije.html
@@ -7,7 +7,7 @@ layout: default
 
     {{ content }}
 
-    {%- assign publikacije_posts = site.posts | where: "category", "publikacije" -%}
+    {%- assign publikacije_posts = site.posts | where: "categories", "publikacije" -%}
 
     {%- if publikacije_posts.size > 0 -%}
       <ul class="post-list">
