--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="google-site-verification" content="oYw48J_ogHioYP7169aXFShRxFrqzgXwWUPx1Re66Ms" />
   <meta name="color-scheme" content="light">
+  <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html','' }}" />
   {% if page.layout == 'home' %}
     <title>Društvo Fršlus</title>
   {% endif %}
