--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,11 @@
   <meta name="google-site-verification" content="oYw48J_ogHioYP7169aXFShRxFrqzgXwWUPx1Re66Ms" />
   <meta name="color-scheme" content="light">
   <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html','' }}" />
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"></noscript>
+  <link rel="preload" href="https://fonts.cdnfonts.com/css/saint-george" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="https://fonts.cdnfonts.com/css/saint-george"></noscript>
+
   {% if page.layout == 'home' %}
     <title>Društvo Fršlus</title>
   {% endif %}
