--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -1,7 +1,8 @@
 @charset "utf-8";
+/*
 @import url('https://fonts.cdnfonts.com/css/saint-george');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-
+*/
 // Define defaults for each variable.
 
 $base-font-family: 'Montserrat', sans-serif !default;
