--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,6 +35,10 @@ layout: default
       {%- endfor -%}
     </ul>
 
+    <div style="text-align: center; margin-top: 30px;">
+      <a href="/novice/" class="page-link">Pokaži vse</a>
+    </div>
+
   {%- endif -%}
 
 </div>
