--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,8 +35,8 @@ layout: default
       {%- endfor -%}
     </ul>
 
-    <div style="text-align: center; margin-top: 30px;">
-      <a href="/novice/" class="page-link">Pokaži vse</a>
+    <div style="text-align: center; margin-top: 50px;">
+      <a href="/novice/" class="show-all-btn">Pokaži vse</a>
     </div>
 
   {%- endif -%}
