--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -22,7 +22,7 @@
 }
 
 .show-all-btn {
-  color: $text-color;
+  color: #000000;
   line-height: $base-line-height;
   font-family: 'Saint George';
   font-size: 1.2em;
